Added feature tables for all models

--- a/src/app/shared/components/feature-table/feature-table.component.html
+++ b/src/app/shared/components/feature-table/feature-table.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="features; else featuresIsNull" class="container">
   <div class="lbl-days">
-    <span *ngFor="let day of days" class="lbl-day">第{{ day + 1 }}天</span>
+    <span *ngFor="let day of _days" class="lbl-day">第{{ day + 1 }}天</span>
   </div>
   <cdk-virtual-scroll-viewport itemSize="20" class="cdk-viewport">
     <div *cdkVirtualFor="let feature of features; let i = index">
@@ -12,9 +12,9 @@
         <span *ngIf="feature.unit" class="lbl-unit">{{ feature.unit }}</span>
       </span>
       <span
-        *ngFor="let day of days"
+        *ngFor="let day of _days"
         [ngStyle]="weights![day][i]"
-        [matTooltip]="x![day][feature.id].toString()"
+        [matTooltip]="x![day][feature.id] | tooltipfy"
         [matTooltipDisabled]="x![day][feature.id] === 0"
         [matTooltipShowDelay]="500"
         (click)="showFeatureValueEditor(feature, day)"
