--- a/src/app/patients/components/patient-graphs/patient-graphs.component.html
+++ b/src/app/patients/components/patient-graphs/patient-graphs.component.html
@@ -30,6 +30,7 @@
         [matBadge]="nMissingAki | badgify"
         matBadgeColor="warn"
         mat-stroked-button
+        (click)="showFeatureTable('aki')"
       >
         <span class="legend legend-aki">&#9679;</span>
         急性肾损伤
@@ -38,6 +39,7 @@
         [matBadge]="nMissingSepsis | badgify"
         matBadgeColor="warn"
         mat-stroked-button
+        (click)="showFeatureTable('sepsis')"
       >
         <span class="legend legend-sepsis">&#9679;</span>脓毒症
       </button>
@@ -45,6 +47,7 @@
         [matBadge]="nMissingMi | badgify"
         matBadgeColor="warn"
         mat-stroked-button
+        (click)="showFeatureTable('mi')"
       >
         <span class="legend legend-mi">&#9679;</span>
         心肌梗塞
@@ -53,6 +56,7 @@
         [matBadge]="nMissingVancomycin | badgify"
         matBadgeColor="warn"
         mat-stroked-button
+        (click)="showFeatureTable('vancomycin')"
       >
         <span class="legend legend-vancomycin">&#9679;</span>
         万古霉素
