--- a/src/app/patients/containers/patient-detail/patient-detail.component.html
+++ b/src/app/patients/containers/patient-detail/patient-detail.component.html
@@ -6,6 +6,8 @@
         [age]="patient.age"
         [gender]="patient.gender"
         [ethnicity]="patient.ethnicity"
+        [los]="patient.los"
+        [admitDate]="patient.admitDate"
       ></app-patient-summary>
     </mat-grid-tile>
     <mat-grid-tile [colspan]="2" [rowspan]="2">
