--- a/src/app/patients/dialogs/patient-feature-table/patient-feature-table.dialog.html
+++ b/src/app/patients/dialogs/patient-feature-table/patient-feature-table.dialog.html
@@ -5,7 +5,7 @@
     [x]="x$ | async"
     [days]="days"
     [formattedX]="formattedX$ | async"
-    [weights]="weights"
+    [weights]="weights$ | async"
     weightsBaseColor="#4CAF50"
     (change)="onChange($event)"
   ></app-feature-table>
