--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+// 公共SCSS文件
 @import '../node_modules/ag-grid-community/dist/styles/ag-grid.css';
 @import '../node_modules/ag-grid-community/dist/styles/ag-theme-material.css';
 
