--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 // 公共SCSS文件
 @import '../node_modules/ag-grid-community/dist/styles/ag-grid.css';
 @import '../node_modules/ag-grid-community/dist/styles/ag-theme-material.css';
+@import "~ng-zorro-antd/ng-zorro-antd.min.css";
 
 html,
 body {
