--- a/src/app/core/containers/main/main.component.html
+++ b/src/app/core/containers/main/main.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
+  <app-sidebar></app-sidebar>
   <div class="content">
     <router-outlet></router-outlet>
   </div>
