--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -24,6 +24,9 @@
       <li nz-submenu nzOpen nzTitle="账户" nzIcon="user">
         <ul>
           <li nz-menu-item nzMatchRouter>
+            <a routerLink="/login">登录</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
             <a>账户信息</a>
           </li>
         </ul>
