--- a/src/app/login/containers/login/login.component.scss
+++ b/src/app/login/containers/login/login.component.scss
@@ -1,73 +1,51 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #1355f6;
-  overflow: hidden;
-}
-
-#app {
-  width: 350px;
-  height: 350px;
-  display: grid;
-  place-items: center;
-}
-#app ul {
+.login-form {
+  max-width: 300px;
   position: relative;
-  width: 350px;
-  height: 50px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  border-radius: 35px;
-  background: rgba(255, 255, 255, 0.65);
-  box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.08), 0 100px 80px rgba(0, 0, 0, 0.03);
-  overflow: hidden;
-}
-#app ul li {
-  list-style: none;
-  display: grid;
-  place-items: center;
-  font-family: "montserrat";
-  color: #1355f6;
-  z-index: 10;
-  cursor: pointer;
-}
-#app ul .focus-el {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: calc(100% / 3);
-  height: 100%;
-  border-radius: 35px;
-  background: #fff;
-  box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.015), 0 100px 80px rgba(0, 0, 0, 0.03);
-}
-#app ul .focus-el.el--2 {
-  left: calc(-100% / 3);
+  top: 20%;
+  left: 35%;
+  // margin-left: -($width / 2);
+  // margin-top: -($height / 2);
+  // width: $width;
+  // height: $height;
 }
 
-.support {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
-  padding: 10px;
-  display: flex;
+.login-form-margin {
+  margin-bottom: 16px;
 }
-.support a {
-  margin: 0 10px;
-  color: #e1f2fb;
-  font-size: 1.8rem;
-  backface-visibility: hidden;
-  transition: all 350ms cubic-bezier(0.38, -0.12, 0.24, 1.91);
+
+// .login-form-forgot {
+//   float: right;
+// }
+
+.login-form-button {
+  width: 100%;
 }
-.support a:hover {
-  transform: scale(1.1);
+
+.forgotAndRegister{
+  width: 200%;
+  .forgot{
+    position: absolute;
+    left: 0%;
+  }
+  .register {
+    position: relative;
+    left: 85%;
+    // float: right;
+  }
+}
+
+
+
+.logo {
+  max-width: 300px;
+  position: relative;
+  top: 10%;
+  left: 20%;
+  // position: absolute;
+  // left: 50%;
+  // display: inline-block;
+  // width: 250px;
+  // line-height: 200px;
+  // height: 40px;
+  // vertical-align: middle;
 }
