实体识别前端完成
完成实体识别前端部分，准备对接后端

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -34,7 +34,7 @@
       <li nz-submenu nzOpen nzTitle="实体识别" nzIcon="form">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a>实体识别</a>
+            <a routerLink = "/ner">实体识别</a>
           </li>
         </ul>
       </li>
