完成实体识别文本输入

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -41,8 +41,14 @@
       <li nz-submenu nzOpen nzTitle="数据库" nzIcon="database">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/patients">病历查询</a>
+            <a routerLink="/patients">病历</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/DB">疾病预测</a>
+          </li>
+          <!-- <li nz-menu-item nzMatchRouter>
+            <a routerLink="/DB">实体识别数据库</a>
+          </li> -->
         </ul>
       </li>
       <li nz-submenu nzOpen nzTitle="疾病预测" nzIcon="dashboard">
