--- a/src/app/register/containers/register/register.component.html
+++ b/src/app/register/containers/register/register.component.html
@@ -67,7 +67,7 @@
       [nzSm]="14"
       [nzXs]="24"
       [nzValidateStatus]="validateForm.controls['phoneNumber']"
-      nzErrorTip="Please input your phone number!"
+      nzErrorTip="电话号码不能为空!"
     >
       <!-- <nz-input-group [nzAddOnBefore]="addOnBeforeTemplate">
         <ng-template #addOnBeforeTemplate>
