--- a/src/app/core/components/sidebar/sidebar.component.scss
+++ b/src/app/core/components/sidebar/sidebar.component.scss
@@ -78,11 +78,11 @@ nz-content {
 }
 
 .menu {
-  min-height: 100%;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  margin-top: -100px;
-  margin-bottom: -40px;
+  height: 85%;
+  // padding-top: 100px;
+  // padding-bottom: 100px;
+  // margin-top: -100px;
+  // margin-bottom: -60px;
 }
 
 .logo {
@@ -90,14 +90,15 @@ nz-content {
   // height: 64px;
   // padding-left: 24px;
   overflow: hidden;
+  bottom : 0%;
   // line-height: 64px;
   background: #001529;
   transition: all 0.3s;
   img {
     display: inline-block;
     width: 250px;
-    bottom: 2%;
-    line-height: 200px;
+    // bottom: 2%;
+    // line-height: 150px;
     height: 40px;
     // vertical-align: middle;
   }
