整合login至core前备份

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
             <a routerLink="/login">登录</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>账户信息</a>
+            <a routerLink="/user">账户信息</a>
           </li>
         </ul>
       </li>
