完成第二版阈值筛查
login位置调整前备份

--- a/src/app/aki/containers/aki/aki.component.html
+++ b/src/app/aki/containers/aki/aki.component.html
@@ -20,11 +20,17 @@
       (predict)="onPredict()"
       (objectid)="(objectid)"
     ></app-data-operations>
+    <app-threshold
+      [showResults]="showThreshold"
+      [data]="threshold_data"
+      label="阈值筛查结果如下"
+    ></app-threshold>
     <app-model-results
       [showResults]="showPredictions$ | async"
       [probabilities]="slicedPredictions$ | async"
       label="患者当日出现急性肾损伤的概率如下"
     ></app-model-results>
+
   </div>
   <nz-drawer
     [nzClosable]="false"
@@ -32,7 +38,7 @@
     nzPlacement="right"
     nzTitle="阈值预警"
     (nzOnClose)="close()"
-    [nzWidth] = "512"
+    [nzWidth]="512"
   >
     <ng-container *nzDrawerContent>
       <ul>
@@ -43,3 +49,41 @@
     </ng-container>
   </nz-drawer>
 </div>
+<nz-modal
+  [(nzVisible)]="isVisible_setting"
+  nzTitle="请选择需要阈值筛查的医疗指标："
+  (nzOnCancel)="handleCancel()"
+  (nzOnOk)="handleOk()"
+  [nzCancelText] = "null"
+>
+  <ng-container *nzModalContent>
+    <nz-checkbox-wrapper style="width: 100%" (nzOnChange)="onChangeThreshold($event)">
+      <div nz-row>
+        <div nz-col nzSpan="8">
+          <label class="option" nz-checkbox nzValue="0" [ngModel]="thresholdOptionArray[0]">碳酸氢盐</label>
+          <label class="option" nz-checkbox nzValue="2" [ngModel]="thresholdOptionArray[2]">氯化物</label>
+          <label class="option" nz-checkbox nzValue="3" [ngModel]="thresholdOptionArray[3]">肌酸酐</label>
+          <label class="option" nz-checkbox nzValue="4" [ngModel]="thresholdOptionArray[4]">葡萄糖</label>
+        </div>
+        <br/>
+        <div nz-col nzSpan="8">
+          <label class="option" nz-checkbox nzValue="7" [ngModel]="thresholdOptionArray[7]">镁</label>
+          <label class="option" nz-checkbox nzValue="9" [ngModel]="thresholdOptionArray[9]">钾</label>
+          <label class="option" nz-checkbox nzValue="10" [ngModel]="thresholdOptionArray[10]">钠</label>
+          <label class="option" nz-checkbox nzValue="1" [ngModel]="thresholdOptionArray[1]">血尿素氮</label>
+        </div>
+        <br/>
+        <div nz-col nzSpan="8">
+          <label class="option" nz-checkbox nzValue="6" [ngModel]="thresholdOptionArray[6]">血红蛋白</label>
+          <label class="option" nz-checkbox nzValue="8" [ngModel]="thresholdOptionArray[8]">血小板</label>
+          <label class="option" nz-checkbox nzValue="11" [ngModel]="thresholdOptionArray[11]">白细胞</label>
+        </div>
+      </div>
+    </nz-checkbox-wrapper>
+  </ng-container>
+  <div *nzModalFooter>
+    <button nz-button color="default" (click)="handleAll()">全选</button>
+    <button nz-button nzType="default" (click)="handleAllNot()" >全不选</button>
+    <button nz-button nzType="primary" (click)="handleOk()" [disabled] = "!enableThreshold">确定</button>
+  </div>
+</nz-modal>
