--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
-<!-- <button
+<button
       nz-button
       nzType="primary"
       (click)="showuserinfo()"
     >
       展示用户信息
-    </button> -->
+    </button>
 <nz-layout class="app-layout">
   <nz-sider
     class="menu-sidebar"
@@ -31,7 +31,7 @@
       <li nz-submenu nzOpen nzTitle="账户" nzIcon="user">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/login">登录</a>
+            <a routerLink="/login" (getUserinfo) = "getUserinfo($event)">登录</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/user">账户信息</a>
