--- a/src/app/shared/components/data-operations/data-operations.component.html
+++ b/src/app/shared/components/data-operations/data-operations.component.html
@@ -27,8 +27,9 @@
     mat-flat-button
     color="primary"
     (click)="onThresholdWarning()"
+    [disabled]="isLoading || disableInfer"
   >
-    阈值预警
+    阈值预警设置
   </button>
   <button
     mat-flat-button
@@ -43,7 +44,7 @@
     <mat-spinner [diameter]="30"></mat-spinner>
   </div>
 </div>
-<h2></h2>
+
 <!-- <input
           matInput
           formControlName="id"
