--- a/src/app/shared/components/data-operations/data-operations.component.scss
+++ b/src/app/shared/components/data-operations/data-operations.component.scss
@@ -4,6 +4,12 @@
   align-items: center;
 }
 
+.container2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 button {
   &:not(:first-of-type) {
     margin-left: 8px;
