--- a/src/app/shared/components/threshold/threshold.component.scss
+++ b/src/app/shared/components/threshold/threshold.component.scss
@@ -2,6 +2,6 @@
   display: grid;
   width: 460px;
   height: 300px;
-  margin-top: -50px;
-  margin-left: 10px;
+  margin-top: 10px;
+  // margin-bottom: 10px;
 }
