--- a/src/app/shared/components/data-operations/data-operations.component.html
+++ b/src/app/shared/components/data-operations/data-operations.component.html
@@ -23,14 +23,7 @@
   >
     重置
   </button>
-  <button
-    mat-flat-button
-    color="primary"
-    (click)="onThresholdWarning()"
-    [disabled]="isLoading || disableInfer"
-  >
-    阈值预警设置
-  </button>
+
   <button
     mat-flat-button
     color="primary"
@@ -39,6 +32,34 @@
   >
     预测
   </button>
+
+  <button
+    mat-flat-button
+    color="primary"
+    (click)="onThresholdWarning()"
+    [disabled]="isLoading || disableInfer"
+  >
+    阈值预警设置
+  </button>
+
+  <button
+    mat-flat-button
+    color="primary"
+    (click)="onCallSimilarity()"
+    [disabled]="isLoading || disableInfer"
+  >
+    推荐相似病例
+  </button>
+
+  <button
+    mat-flat-button
+    color="primary"
+    (click)="onAddFavorite()"
+    [disabled]="isLoading || disableInfer"
+  >
+    收藏
+  </button>
+
 
   <div *ngIf="isLoading" class="spinner">
     <mat-spinner [diameter]="30"></mat-spinner>
